@@ -1,3 +1,4 @@
+ - Bug fix in SubDomain::mark, fixes bug in DirichletBC based on SubDomain::inside
  - Improvements in time series class, recognizing old stored values
  - Add FacetCell class useful in algorithms iterating over boundary facets
  - Rename reconstruct --> extrapolate
